# MAIKo2Decoder

./: CMakeLists.txt  README.md  create_index_tables.sql  make_index.cpp  make_index.json  test_bench.cpp
include/: CounterData.hpp  DecoderFormat.hpp  DecoderUtility.hpp  EventWordsBuffer.hpp  FADCData.hpp  IndexTableFormat.hpp  StreamRawData.hpp  TPCData.hpp
src/: CounterData.cpp  DecoderUtility.cpp  EventWordsBuffer.cpp  FADCData.cpp  StreamRawData.cpp  TPCData.cpp
